# ChangeLog for www-misc/visitors
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-misc/visitors/ChangeLog,v 1.12 2010/09/28 19:30:26 jer Exp $

*visitors-0.7-r1 (28 Sep 2010)

  28 Sep 2010; Jeroen Roovers <jer@gentoo.org> +visitors-0.7-r1.ebuild:
  Respect LDFLAGS (bug #337115), CC, more CFLAGS. Make sed die. Remove empty
  DEPEND. Remove useless USE=debug and related logic.

  13 Apr 2010; Markos Chandras <hwoarang@gentoo.org> visitors-0.7.ebuild:
  Keyworded for amd64 wrt bug #314543

  22 Feb 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> visitors-0.7.ebuild:
  Fix installed documentation wrt bug #298585 by flameeyes.

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org> visitors-0.7.ebuild:
  remove dependency on graphviz (bug 163593); quote a S variable; adjust
  DESCRIPTION and stable on x86

  15 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning to m-needed, as beu is being retired (#66608).

*visitors-0.7 (14 Sep 2006)

  14 Sep 2006; Elfyn McBratney <beu@gentoo.org> -visitors-0.2a.ebuild,
  +visitors-0.7.ebuild:
  Version bump; remove old (0.2a) version.

  12 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> visitors-0.5.ebuild:
  Stable on ppc.

  08 Sep 2005; Elfyn McBratney <beu@gentoo.org> metadata.xml,
  visitors-0.5.ebuild:
  Update metadata.xml.  Stable on x86.

*visitors-0.5 (11 May 2005)

  11 May 2005; Elfyn McBratney <beu@gentoo.org> +visitors-0.5.ebuild:
  Long awaited version bump.

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  visitors-0.2a.ebuild:
  Masked visitors-0.2a.ebuild stable for ppc

*visitors-0.2a (15 Aug 2004)

  15 Aug 2004; Stuart Herbert <stuart@gentoo.org> +metadata.xml,
  +visitors-0.2a.ebuild:
  Moved from net-www/visitors to www-misc/visitors.

  12 Jun 2004; David Holm <dholm@gentoo.org> visitors-0.2a.ebuild:
  Added to ~ppc.
