@@ -1,19 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST visitors-0.5.tar.gz 70224 RMD160 12d6001912fef82786b038008e55f2bfe7ff50fe SHA1 d36dd32b9d4c8dc8384c286b14be069aee63d81f SHA256 4f89ae5f76fd26030b532793f44b76062ff14ebc6000421ed146d91df17ea73a
 DIST visitors-0.7.tar.gz 100154 RMD160 8819becac412ff79de4d88dd2aadb7c5faf2f167 SHA1 cdccdfb82001c7c3dadf68456574cac1a5d941e3 SHA256 d2149e33ffe96b1f52b0587cff65973b0bc0b24ec43cdf072a782c1bd52148ab
 EBUILD visitors-0.5.ebuild 808 RMD160 9c98606e05ee93df24c2f3a9ba877a892c571b41 SHA1 cbde0f2371d20014e7f15b799a556479dcbd2695 SHA256 4a4e7dfaf5fb3a09dee1641fe8dc19340508a2dfef468b9dc9b0353d8a1e4c9d
-EBUILD visitors-0.7-r1.ebuild 868 RMD160 023f7640568b0738d6e1c8114fd5bbac97db5866 SHA1 d17fab34a4f727899dedc2a16a4e8de93fb134b0 SHA256 3b6b876654267b2ae683a77d7bcbc945cfd8a1a6205ba3c1ee2ff83ef985451d
+EBUILD visitors-0.7-r1.ebuild 867 RMD160 b5714541d1c2101f041cdfa1f1f60bc0d3c100c6 SHA1 9ff7d4725906153fd17944710f29f82610004a12 SHA256 489b48dc02cedf65bc1a6dc289a0f0116d250b1db9db9cb719ebc7f09fc04d19
 EBUILD visitors-0.7.ebuild 779 RMD160 1011b10ff9940801b5197e0525d2f1b6b0881064 SHA1 974b8b3dfacea0fa343592134cf04dfbcb2be758 SHA256 c0df2e6b0e0c5b2c5cd5f9413d324283cb705a7b1bbff9ea1dfa079b11e88165
-MISC ChangeLog 2148 RMD160 33ce3b81f3e0bbbd8a1c2d2c899ce5626685074b SHA1 2349f4f1ea5b66871c59f9ad30659110f7ad259d SHA256 c7b7e1c4456ad9678716d7b74685fd0ba0bd172f00f3ff37216db8feb879a680
+MISC ChangeLog 2258 RMD160 201521ab668343aaf5a5307b4506f6585584c224 SHA1 a0462b5372a5045664ea14084d09966c68cc50bf SHA256 d0d07792285af73581669cdcead58c84d8a742b4e845e651a8577b2454a68fd5
 MISC metadata.xml 462 RMD160 7b5a0c8f53d522a1c8953c18d482de03ffd6ce2f SHA1 f6ef76dd19d743ad5b372013fbe5192f652da2c8 SHA256 675f918e964b9d18a4ffdbe9085ec6d24cb3711a66bb9b061f7f69a6db7aa869
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk59tzgACgkQfXuS5UK5QB2qWgQAsmqk5tnBtnN2cEWyL+E3Fpbk
-90ouVG9kwNvx4zlYYiPqxy6gLwab0JaWRN1ihAFxTCSl2rKfeJo3yEoWHNk1fM4Z
-Yx660zqNFvrgFLo4nLHGE+d4Cut6ekZPjWXw+1cYyS67ChYZupy4Xr4kpZh+vf2C
-KFUNdibJJF4efBOQdWk=
-=N4S4
+iQEcBAEBCgAGBQJO7jmOAAoJEOTDgjZ80txdCFQH/22k5D11l6IEbtBS0c0Hndxi
+RsaD6ZlEbCxXGTGEV0zbgQdzM8UW2MvWDlf/UjA9Xg8l2Sx+0fF3/umR8r2nbqkd
+6leN3aRhtRJDwB9KtFFueTJZ2Je6ogYbSrVevfK5GUBCxkjK8NQAO8nvYvIy8Kyv
+6HndBum6Norsuw/yT+eJD6ZZONWdVXWYweOcDNhlmQqEupotPvQrnSDUl944EpuV
+ItKVtOAgFxBPcySrEJ+P9PgsnfjevGQWXJN+O5+TmSwRkFmNOvq9bDT3FxFw69qW
+Q7NRJzH3lF0RcmBsCFuA2AbXvrp+7FZcAsweUB8srVMVWWC28D5gikHLVdOM/Y4=
+=Rnuk
 -----END PGP SIGNATURE-----
