@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/visitors/visitors-0.7-r1.ebuild,v 1.1 2010/09/28 19:30:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/visitors/visitors-0.7-r1.ebuild,v 1.2 2011/12/18 19:05:29 ago Exp $
 
 EAPI="2"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.hping.org/visitors/"
 SRC_URI="http://www.hping.org/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="amd64 ~ppc ~x86"
 IUSE=""
 
 S="${WORKDIR}/${P/-/_}"
